--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-title: Allmyles
+title: Travel API by Allmyles
+description: Travel API by Allmyles Our Travel API provides non travel industry professionals access to global and bookable travel content to build innovative web or native apps. You can provide your customer with the best flight fares, hotel rates and car rental rates thus creating your Y-gen travel reseller.
+
 exclude:
   - vendor
 sass:
